// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionEditor should render 1`] = `
<SectionEditor__SectionCanvas
  data-test="section-editor"
  id={null}
>
  <Modal
    isOpen={false}
    negativeButtonText="Cancel"
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
    positiveButtonText="Delete"
    title="Delete section"
    warningMessage="All edits, properties and routing settings will also be removed."
  />
  <MoveSectionQuery
    questionnaireId="1"
  >
    <Component />
  </MoveSectionQuery>
  <SectionEditor__Padding>
    <RichTextEditor
      autoFocus={false}
      controls={
        Object {
          "highlight": true,
          "piping": true,
        }
      }
      disabled={false}
      errorValidationMsg={null}
      id="section-title"
      isRepeatingSection={false}
      label={
        <DescribedText
          description="This will be shown on the hub."
        >
          Section title
        </DescribedText>
      }
      listId={null}
      maxHeight={12}
      multiline={false}
      name="title"
      onUpdate={[Function]}
      placeholder=""
      size="large"
      testSelector="txt-section-title"
      value="Section 1"
    />
    <SectionEditor__HorizontalRule />
    <SectionIntroduction
      handleUpdate={[Function]}
      introductionContentErrorMessage={null}
      introductionTitleErrorMessage={null}
      section={
        Object {
          "alias": "alias",
          "collapsibleSummary": false,
          "comments": Array [],
          "id": "section-1",
          "introductionContent": "Intro content",
          "introductionEnabled": true,
          "introductionPageDescription": "Intro description",
          "introductionTitle": "Intro title",
          "questionnaire": Object {
            "collapsibleSummary": false,
            "hub": false,
            "id": "2",
            "navigation": true,
          },
          "repeatingSection": false,
          "repeatingSectionListId": null,
          "requiredCompleted": true,
          "sectionSummary": false,
          "showOnHub": true,
          "title": "Section 1",
          "validationErrorInfo": Object {
            "errors": Array [],
            "id": "3",
            "totalCount": 0,
          },
        }
      }
    />
    <SectionEditor__HorizontalRule />
    <SectionSummary
      errors={Array []}
      id="section-1"
      sectionSummary={false}
    />
    <SectionEditor__HorizontalRule />
    <RepeatingSection
      handleUpdate={[Function]}
      section={
        Object {
          "alias": "alias",
          "collapsibleSummary": false,
          "comments": Array [],
          "id": "section-1",
          "introductionContent": "Intro content",
          "introductionEnabled": true,
          "introductionPageDescription": "Intro description",
          "introductionTitle": "Intro title",
          "questionnaire": Object {
            "collapsibleSummary": false,
            "hub": false,
            "id": "2",
            "navigation": true,
          },
          "repeatingSection": false,
          "repeatingSectionListId": null,
          "requiredCompleted": true,
          "sectionSummary": false,
          "showOnHub": true,
          "title": "Section 1",
          "validationErrorInfo": Object {
            "errors": Array [],
            "id": "3",
            "totalCount": 0,
          },
        }
      }
    />
  </SectionEditor__Padding>
</SectionEditor__SectionCanvas>
`;

exports[`SectionEditor should render 2`] = `
<SectionEditor__SectionCanvas
  data-test="section-editor"
  id={null}
>
  <Modal
    isOpen={false}
    negativeButtonText="Cancel"
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
    positiveButtonText="Delete"
    title="Delete section"
    warningMessage="All edits, properties and routing settings will also be removed."
  />
  <MoveSectionQuery
    questionnaireId="1"
  >
    <Component />
  </MoveSectionQuery>
  <SectionEditor__Padding>
    <RichTextEditor
      autoFocus={false}
      controls={
        Object {
          "highlight": true,
          "piping": true,
        }
      }
      disabled={false}
      errorValidationMsg={null}
      id="section-title"
      isRepeatingSection={false}
      label={
        <DescribedText
          description="This will be shown on the hub."
        >
          Section title
        </DescribedText>
      }
      listId={null}
      maxHeight={12}
      multiline={false}
      name="title"
      onUpdate={[Function]}
      placeholder=""
      size="large"
      testSelector="txt-section-title"
      value="Section 2"
    />
    <SectionEditor__HorizontalRule />
    <SectionIntroduction
      handleUpdate={[Function]}
      introductionContentErrorMessage={null}
      introductionTitleErrorMessage={null}
      section={
        Object {
          "alias": "alias",
          "collapsibleSummary": false,
          "comments": Array [],
          "id": "section-2",
          "introductionContent": "Intro content",
          "introductionEnabled": true,
          "introductionPageDescription": "Intro description",
          "introductionTitle": "Intro title",
          "questionnaire": Object {
            "collapsibleSummary": false,
            "hub": false,
            "id": "2",
            "navigation": true,
          },
          "repeatingSection": false,
          "repeatingSectionListId": null,
          "requiredCompleted": true,
          "sectionSummary": false,
          "showOnHub": true,
          "title": "Section 2",
          "validationErrorInfo": Object {
            "errors": Array [],
            "id": "3",
            "totalCount": 0,
          },
        }
      }
    />
    <SectionEditor__HorizontalRule />
    <SectionSummary
      errors={Array []}
      id="section-2"
      sectionSummary={false}
    />
    <SectionEditor__HorizontalRule />
    <RepeatingSection
      handleUpdate={[Function]}
      section={
        Object {
          "alias": "alias",
          "collapsibleSummary": false,
          "comments": Array [],
          "id": "section-2",
          "introductionContent": "Intro content",
          "introductionEnabled": true,
          "introductionPageDescription": "Intro description",
          "introductionTitle": "Intro title",
          "questionnaire": Object {
            "collapsibleSummary": false,
            "hub": false,
            "id": "2",
            "navigation": true,
          },
          "repeatingSection": false,
          "repeatingSectionListId": null,
          "requiredCompleted": true,
          "sectionSummary": false,
          "showOnHub": true,
          "title": "Section 2",
          "validationErrorInfo": Object {
            "errors": Array [],
            "id": "3",
            "totalCount": 0,
          },
        }
      }
    />
  </SectionEditor__Padding>
</SectionEditor__SectionCanvas>
`;
